[package]
name = "swali_cli"
version = "0.1.0"
authors = ["mkulak <kleshney@gmail.com>"]

[dependencies]
futures = "0.2"
tokio-core = "0.1"
hyper = "0.12"
hyper-tls = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.31"
ansi_term = "0.11"

[dev-dependencies]
assert_cli = "0.6"
tempdir = "0.3"
